WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203588
[ Mac Debug ] (
r251706
) webanimations/empty-keyframes-crash.html is crashing
https://bugs.webkit.org/show_bug.cgi?id=203588
Summary
[ Mac Debug ] (r251706) webanimations/empty-keyframes-crash.html is crashing
Truitt Savell
Reported
2019-10-29 14:38:30 PDT
The changes in
https://trac.webkit.org/changeset/251706/webkit
broke webanimations/empty-keyframes-crash.html casting it to crash on Mac debug. History:
https://results.webkit.org/?suite=layout-tests&test=webanimations%2Fempty-keyframes-crash.html
Log: Application Specific Information: CRASHING TEST: webanimations/empty-keyframes-crash.html Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.JavaScriptCore 0x00000002eb1b4810 WTFCrash + 16 (Assertions.cpp:305) 1 com.apple.WebCore 0x00000002d8006c6b WTFCrashWithInfo(int, char const*, char const*, int) + 27 2 com.apple.WebCore 0x00000002d9d78ff8 WebCore::KeyframeEffect::setAnimatedPropertiesInStyle(WebCore::RenderStyle&, double) + 168 (KeyframeEffect.cpp:1070) 3 com.apple.WebCore 0x00000002d9d78ce3 WebCore::KeyframeEffect::apply(WebCore::RenderStyle&) + 195 (KeyframeEffect.cpp:1029)
https://build.webkit.org/results/Apple%20High%20Sierra%20Debug%20WK2%20(Tests)/r251715%20(10173)/webanimations/empty-keyframes-crash-crash-log.txt
Attachments
Patch
(3.19 KB, patch)
2019-10-30 03:26 PDT
,
Antoine Quint
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-10-29 14:39:52 PDT
<
rdar://problem/56721908
>
Radar WebKit Bug Importer
Comment 2
2019-10-29 14:40:06 PDT
<
rdar://problem/56721919
>
Antoine Quint
Comment 3
2019-10-30 03:26:46 PDT
Created
attachment 382293
[details]
Patch
Antoine Quint
Comment 4
2019-10-30 11:46:10 PDT
Landed in
r251789
.
Matt Lewis
Comment 5
2019-10-30 16:23:39 PDT
***
Bug 203641
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug